k8s-yaml/docker-registry-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry-ui
  name: docker-registry-ui
  namespace: cps-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: docker-registry-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2024-07-05T15:03:00Z"
      creationTimestamp: null
      labels:
        app: docker-registry-ui
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Taipei
          image: quiq/docker-registry-ui
          imagePullPolicy: Always
          name: docker-registry-ui
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/config.yml
              name: config
              readOnly: true
              subPath: config.yml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - configMap:
            defaultMode: 420
            name: docker-registry-ui-config
          name: config

---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: cps-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 31616
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: docker-registry-ui
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
