k8s-yaml/docker-registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: cps-system
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32767
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: docker-registry
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker-registry
    name: docker-registry
  namespace: cps-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: docker-registry
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: docker-registry
    spec:
      containers:
      - env:
          - name: REGISTRY_STORAGE_DELETE_ENABLED
            value: "true"
        image: registry:2
        imagePullPolicy: IfNotPresent
        name: docker-registry
        ports:
          - containerPort: 5000
            protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/registry
          name: registry-data
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: cps-k8s-master-10-110-54-80
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
      volumes:
        - hostPath:
            path: /root/Documents/docker-registry/data
            type: Directory
          name: registry-data
