k8s-yaml/gluster-endpoint-svc.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
subsets:
  - addresses:
      - ip: 127.0.0.82
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 127.0.0.83
    ports:
      - port: 1
        protocol: TCP
  - addresses:
      - ip: 127.0.0.84
    ports:
      - port: 1
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 1
      protocol: TCP
      targetPort: 1
  sessionAffinity: None
  type: ClusterIP
