k8s-yaml/ingress-example.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: an-ingress
spec:
  rules:
    - http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: rd-kibana
                port:
                  name: rd-kibana
                  number: 5601
          - path: /docker-registry-ui
            pathType: Prefix
            backend:
              service:
                name: docker-registry-ui
                port:
                  number: 8080
