k8s-yaml/traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: traefik
  selector:
    app.kubernetes.io/name: traefik

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
spec:
  rules:
    - http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik-web-ui
                port:
                  number: 9000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik-web-ui
                port:
                  number: 9000
